@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Inscripcion {
  -id: Integer
  -materias_inscriptas: Materia[]
  -inscripto: Alumno

  +aprobada(): Boolean
}

class Alumno {
  -String nombre
  -String legajo
  -Materia[] materias_aprobadas

  +puedeCursar(Materia materia): Boolean
}

class Materia {
  -int id
  -String nombre
  -Materia[] correlativas

  +getCorrelativas(): Materia[]
}

Materia --> "*" Materia
Alumno --> "*" Materia
Inscripcion --> "*" Materia
Inscripcion --> Alumno

@enduml